tests/baselines/reference/metadataReferencedWithinFilteredUnion(strictnullchecks=true,target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
Class2.ts(13,9): error TS2322: Type 'undefined' is not assignable to type 'Class1'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== Class1.ts (0 errors) ====
    export class Class1 {
    }
==== Class2.ts (1 errors) ====
    import { Class1 } from './Class1';
    
    function decorate(target: any, propertyKey: string) {
    }
    
    export class Class2 {
        @decorate
        get maybeProp(): Class1 | undefined {
            return undefined;
        }
        @decorate
        get prop(): Class1 {
            return undefined;
            ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'Class1'.
        }
    }